rk_worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rk-worker
  labels:
    app: rk-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rk-worker
  template:
    metadata:
      labels:
        app: rk-worker
    spec:
      containers:
        - name: rk-worker
          image: rk_worker:latest
          imagePullPolicy: Never
