rk_api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rk-api
  labels:
    app: rk-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rk-api
  template:
    metadata:
      labels:
        app: rk-api
    spec:
      containers:
        - name: rk-api
          image: rk_api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rk-api-service
spec:
  type: NodePort
  selector:
    app: rk-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
