ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rk-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
        - path: /
          backend:
            service:
              name: rk-api-service
              port:
                number: 8080
